Executed few steps during simple liner generation